--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".views.SearchResultsActivity"/>
+        <activity android:name=".views.SearchResultsDishesActivity"/>
+        <activity android:name=".views.SearchResultsRestaurantsActivity"/>
+        <activity android:name=".views.SearchActivity"/>
+        <activity android:name=".views.DishActivity"/>
     </application>
 
 </manifest>
