--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <application
         android:name=".ScanEatApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -28,6 +28,10 @@
         <activity android:name=".views.SearchResultsRestaurantsActivity"/>
         <activity android:name=".views.SearchActivity"/>
         <activity android:name=".views.DishActivity"/>
+        <activity android:name=".views.UserPreferencesActivity"/>
+        <activity android:name=".views.GeneralSettingsActivity"/>
+        <activity android:name=".views.SignUpActivity"/>
+        <activity android:name=".views.RestaurantActivity"/>
     </application>
 
 </manifest>
